Add gms switch page
Change-Id: I9791847b60efc18d20e5e30d22ce3bb16b718c74
Signed-off-by: LibXZR <i@xzr.moe>

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,5 +3,7 @@
     <style name="Theme.KscopeSetupWizard" parent="android:Theme.DeviceDefault.Light">
         <item name="android:statusBarColor">@color/transparent</item>
         <item name="android:navigationBarColor">@color/transparent</item>
+        <item name="android:switchStyle">@style/Switch.SettingsLib</item>
+        <item name="preferenceTheme">@style/PreferenceTheme.SettingsLib</item>
     </style>
 </resources>
